[package]
name = "sn_launch_tool"
version = "0.8.0"
description = "SAFE API"
authors = [ "Gabriel Viganotti <gabrielviganotti@gmail.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_launch_tool.git"
edition = "2018"

[dependencies]
color-eyre = "0.5.11"
dirs-next = "1.0.1"
eyre = "0.6.5"
serde_json = "1.0.62"
structopt = "~0.3.21"
tracing = "0.1.26"
tracing-subscriber = "0.3.1"
