[package]
name = "sn_launch_tool"
version = "0.12.1"
description = "SAFE API"
authors = [ "Gabriel Viganotti <gabrielviganotti@gmail.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_launch_tool.git"
edition = "2018"

[dependencies]
color-eyre = "~0.6.0"
dirs-next = "2.0"
eyre = "~0.6.5"
clap = { version = "3.0.0", features = ["derive", "env"] }
tracing = "~0.1.26"
tracing-subscriber = "~0.3.1"
